added image and about me info

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,6 @@
     <title>Mariana Bromfield Portfolio</title>
 </head>
 <body>
-  
     <ul class="nav justify-content-end">
         <li class="nav-item">
           <a class="nav-link active" href="index.html">About</a>
@@ -20,12 +19,28 @@
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
       </ul>
 
+    <div class="container">
+            <div class="col-md-4">
+                    <div class="card" style="width: 30rem;">
+                        <div class="card-body">
+                            <h1 class="card-title">Portfolio</h1>
+                            <!--<h6 class="card-subtitle">Card subtitle</h6>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->                    </div>
+                    </div>
 
-    </nav>
+ 
+
+        <div class="row">
+            <div class="col-md-3">
+                
+            </div>
+
+        </div>
+
+    </div>
+
+    
 </body>
 </html>
