--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     
     <title>Mariana Bromfield Portfolio</title>
+    <style>
+            body {
+                background-image: url(lilypads.png);
+                /*background pattern from Toptal Subtle Patterns*/  
+                }
+        </style>
 </head>
 <body>
         <ul class="nav justify-content-end">
