link to word guess game

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,9 +40,12 @@
                             <h2 class="card-title">Portfolio</h2>
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <img src="technics1.jpg" alt="Wordguess" class="img-thumbnail">
+                                        <a href="https://mcb85.github.io/Word-Guess-Game/" target="blank"> <img src="technics1.jpg" alt="Wordguess" class="img-thumbnail">
+                                            </a>
                                             <div class="text-block">
                                                 <h4>Wordguess</h4>
+                                                <!--Link to game-->
+                                                
                                             </div>
                                     </div>
 
