updated portfolio page, added crystal collector game link, updated text

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,16 +43,16 @@
                                         <a href="https://mcb85.github.io/Word-Guess-Game/" target="blank"> <img src="technics1.jpg" alt="Wordguess" class="img-thumbnail">
                                             </a>
                                             <div class="text-block">
-                                                <h4>Wordguess</h4>
-                                                <!--Link to game-->
+                                                <h4>Word Guess</h4>
                                                 
                                             </div>
                                     </div>
 
                                     <div class="col-sm-6">
-                                        <img src="technics2.jpg" alt="RPG Game" class="img-thumbnail">
+                                        <a href="https://mcb85.github.io/unit-4-game/" target="blank"> <img src="technics2.jpg" alt="RPG Game" class="img-thumbnail">
+                                            </a>
                                             <div class="text-block2">
-                                                <h4>RPG Game</h4>
+                                                <h4>Crystal Collector</h4>
                                             </div>
                                     </div>
                                 </div>
