added link to Trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
 
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <img src="technics3.jpg" alt="Trivia Game" class="img-thumbnail">
+                                        <a href="https://mcb85.github.io/Trivia-Game/" target="blank"><img src="technics3.jpg" alt="Trivia Game" class="img-thumbnail"></a>
                                             <div class="text-block3">
                                                 <h4>Trivia Game</h4>
                                             </div>
