add giftastic link to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                                     </div>
 
                                     <div class="col-sm-6">
-                                        <a href="https://mcb85.github.io/unit-4-game/" target="blank"> <img src="technics2.jpg" alt="RPG Game" class="img-thumbnail">
+                                        <a href="https://mcb85.github.io/unit-4-game/" target="blank"> <img src="technics2.jpg" alt="Crystal Collector" class="img-thumbnail">
                                             </a>
                                             <div class="text-block2">
                                                 <h4>Crystal Collector</h4>
@@ -66,9 +66,9 @@
                                     </div>
 
                                     <div class="col-sm-6">
-                                        <img src="technics4.jpg" alt="Rutgers Info Widget" class="img-thumbnail">
+                                        <a href="https://mcb85.github.io/GifTastic/" target="blank"><img src="technics4.jpg" alt="Giftastic" class="img-thumbnail"></a>
                                             <div class="text-block4 text-white">
-                                                <h4 class= "justify-content-center">Rutgers Info Widget</h4>
+                                                <h4 class= "justify-content-center">Giftastic</h4>
                                             </div>
                                     </div>
                                 </div>
