add train scheduler link to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -75,9 +75,9 @@
 
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <img src="technics5.jpg" alt="Rock Paper Scissors" class="img-thumbnail">
+                                        <a href="https://mcb85.github.io/Train-Scheduler/" target="blank"><img src="technics5.jpg" alt="Train Scheduler" class="img-thumbnail"></a>
                                             <div class="text-block5 text-white">
-                                                <h4>Rock Paper Scissors</h4>
+                                                <h4>Train Scheduler</h4>
                                             </div>
                                     </div>
                                 </div>  
