add screenshots for apps, update css, begin adding media queries

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
     <title>Mariana Bromfield Portfolio</title>
     <style>
@@ -24,13 +25,13 @@
 
         <ul class="nav justify-content-end bg-white">
             <li class="nav-item">
-                <a class="nav-link" href="index.html">About</a>
+                <a class="nav-link text-white" href="index.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="portfolio.html">Portfolio</a>
+                <a class="nav-link active text-white" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link text-white" href="contact.html">Contact</a>
             </li>
         </ul>
     </nav>
@@ -44,18 +45,18 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <a href="https://mcb85.github.io/Word-Guess-Game/" target="blank"> <img
-                                        src="technics1.jpg" alt="Wordguess" class="img-thumbnail">
+                                        src="friends.JPG" alt="Wordguess" class="img-thumbnail">
                                 </a>
-                                <div class="text-block">
+                                <div class="text-block text-center">
                                     <h4>Word Guess</h4>
                                 </div>
                             </div>
 
                             <div class="col-sm-6">
-                                <a href="https://mcb85.github.io/unit-4-game/" target="blank"> <img src="technics2.jpg"
+                                <a href="https://mcb85.github.io/Crystal-Collector/" target="blank"> <img src="Crystal-Collector.JPG"
                                         alt="Crystal Collector" class="img-thumbnail">
                                 </a>
-                                <div class="text-block2">
+                                <div class="text-block">
                                     <h4>Crystal Collector</h4>
                                 </div>
                             </div>
@@ -63,17 +64,17 @@
 
                         <div class="row">
                             <div class="col-sm-6">
-                                <a href="https://mcb85.github.io/Trivia-Game/" target="blank"><img src="technics3.jpg"
+                                <a href="https://mcb85.github.io/Trivia-Game/" target="blank"><img src="trivia.JPG"
                                         alt="Trivia Game" class="img-thumbnail"></a>
-                                <div class="text-block3">
+                                <div class="text-block">
                                     <h4>Trivia Game</h4>
                                 </div>
                             </div>
 
                             <div class="col-sm-6">
-                                <a href="https://mcb85.github.io/GifTastic/" target="blank"><img src="technics4.jpg"
+                                <a href="https://mcb85.github.io/GifTastic/" target="blank"><img src="gifTastic.JPG"
                                         alt="Giftastic" class="img-thumbnail"></a>
-                                <div class="text-block4 text-white">
+                                <div class="text-block text-white">
                                     <h4 class="justify-content-center">Giftastic</h4>
                                 </div>
                             </div>
@@ -82,16 +83,16 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <a href="https://mcb85.github.io/Train-Scheduler/" target="blank"><img
-                                        src="technics5.jpg" alt="Train Scheduler" class="img-thumbnail"></a>
-                                <div class="text-block5 text-white">
+                                        src="train-scheduler.JPG" alt="Train Scheduler" class="img-thumbnail"></a>
+                                <div class="text-block text-white">
                                     <h4>Train Scheduler</h4>
                                 </div>
                             </div>
 
                             <div class="col-sm-6">
-                                <a href="https://fellsweb.github.io/Project_1/" target="blank"><img src="technics2.jpg"
+                                <a href="https://fellsweb.github.io/Project_1/" target="blank"><img src="now.jpg"
                                         alt="N.O.W." class="img-thumbnail"></a>
-                                <div class="text-block6 text-white">
+                                <div class="text-block text-white">
                                     <h4>N.O.W.</h4>
                                 </div>
                             </div>
@@ -137,14 +138,12 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <a class="text-white" href="https://github.com/mcb85/Train-Scheduler"
-                            target="blank">Train-Scheduler</aclass="text-white">
+                            target="blank">Train-Scheduler</a>
                     </div>
 
                     <div class="col-sm-6">
                         <a class="text-white" href="https://github.com/FellsWeb/Project_1" target="blank">N.O.W.
-                            </aclass="text-white">
-                    </div>
-                </div>
+                        </a>
             </span>
         </div>
     </footer>
