--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <div class="card-body">
                         <h2 class="card-title">About Me</h2>
                         <div class="row">
-                            <div class="col-sm-4">
+                            <divgi class="col-sm-4">
                                 <img id="profile" src="mc.jpg" alt="Mariana Bromfield" class="img-thumbnail">
-                            </div>
+                            </divgi>
 
                             <div class="col-sm-8">
                                 <p class="text-left">I am Mariana Bromfield, a school psychologist, looking to become a
