--- a/portfolio.html
+++ b/portfolio.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="bootstrap.css">
-    <title>Mariana Bromfield Portfolio</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="bootstrap.css">
+        <title>Mariana Bromfield Portfolio</title>
     <style>
         body {
             background-image: url(lilypads.png);
@@ -20,26 +20,35 @@
 
 <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top my-logo" role="navigation">
-        <h1 class="text-white mx-auto mb-0">Mariana Bromfield</h1>
+    <nav class="navbar navbar-expand-md navbar-fixed-top">
+        <a class="navbar-brand text-white" href="index.html">Mariana Bromfield</a>
 
-        <ul class="nav justify-content-end bg-white">
-            <li class="nav-item">
-                <a class="nav-link text-white" href="index.html">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active text-white" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="contact.html">Contact</a>
-            </li>
-        </ul>
+        <button class="navbar-toggler collapsed text-white" type="button" data-toggle="collapse"
+            data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon">Menu</span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarCollapse" style>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="index.html">About <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
+    <main role="main" class="container">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <div class="card mx-auto mt-5 mb-5" style="width: 40rem;">
+                <div class="card mx-auto mt-5 mb-5">
                     <div class="card-body">
                         <h2 class="card-title">Portfolio</h2>
                         <div class="row">
@@ -102,6 +111,7 @@
             </div>
         </div>
     </div>
+    </main>
 
 
     <footer class="footer mt-auto py-3 text-white">
@@ -150,7 +160,10 @@
 
     </div>
 
-
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 </body>
 
