added liri link and photo to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -106,6 +106,17 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <a href="https://github.com/mcb85/liri-node-app" target="blank"><img
+                                        src="initial-prompt.jpg" alt="liri" class="img-thumbnail"></a>
+                                <div class="text-block text-white">
+                                    <h4>Liri Node App</h4>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </div>
@@ -154,6 +165,19 @@
                     <div class="col-sm-6">
                         <a class="text-white" href="https://github.com/FellsWeb/Project_1" target="blank">N.O.W.
                         </a>
+                    </div>
+                </div>
+
+                <div class = "row">
+                    <div class="col-sm-6">
+                        <a class="text-white" href="https://github.com/mcb85/liri-node-app"
+                            target="blank">Liri-Node-App</a>
+                    </div>
+
+
+                </div>
+
+
             </span>
         </div>
     </footer>
