changed now pic name

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
                             </div>
 
                             <div class="col-sm-6">
-                                <a href="https://fellsweb.github.io/Project_1/" target="blank"><img src="now.jpg"
+                                <a href="https://fellsweb.github.io/Project_1/" target="blank"><img src="now.JPG"
                                         alt="N.O.W." class="img-thumbnail"></a>
                                 <div class="text-block text-white">
                                     <h4>N.O.W.</h4>
