--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,13 @@
                                     <h4>Liri Node App</h4>
                                 </div>
                             </div>
-
+                            <div class="col-sm-6">
+                                <a href="https://github.com/mcb85/Bamazon" target="blank"><img
+                                        src="list-inventory.JPG" alt="bamazon" class="img-thumbnail"></a>
+                                <div class="text-block text-white">
+                                    <h4>Bamazon</h4>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -174,7 +180,10 @@
                             target="blank">Liri-Node-App</a>
                     </div>
 
-
+                    <div class="col-sm-6">
+                        <a class="text-white" href="https://github.com/mcb85/Bamazon"
+                            target="blank">Bamazon</a>
+                    </div>
                 </div>
 
 
