--- a/portfolio.html
+++ b/portfolio.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="bootstrap.css">
-        <title>Mariana Bromfield Portfolio</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="bootstrap.css">
+    <title>Mariana Bromfield Portfolio</title>
     <style>
         body {
             background-image: url(lilypads.png);
@@ -45,89 +45,102 @@
     </nav>
 
     <main role="main" class="container">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card mx-auto mt-5 mb-5">
-                    <div class="card-body">
-                        <h2 class="card-title">Portfolio</h2>
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <a href="https://mcb85.github.io/Word-Guess-Game/" target="blank"> <img
-                                        src="friends.JPG" alt="Wordguess" class="img-thumbnail">
-                                </a>
-                                <div class="text-block text-center">
-                                    <h4>Word Guess</h4>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card mx-auto mt-5 mb-5">
+                        <div class="card-body">
+                            <h2 class="card-title">Portfolio</h2>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <a href="https://mcb85.github.io/Word-Guess-Game/" target="blank"> <img
+                                            src="friends.JPG" alt="Wordguess" class="img-thumbnail">
+                                    </a>
+                                    <div class="text-block text-center">
+                                        <h4>Word Guess</h4>
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <a href="https://mcb85.github.io/Crystal-Collector/" target="blank"> <img
+                                            src="Crystal-Collector.JPG" alt="Crystal Collector" class="img-thumbnail">
+                                    </a>
+                                    <div class="text-block">
+                                        <h4>Crystal Collector</h4>
+                                    </div>
                                 </div>
                             </div>
 
-                            <div class="col-sm-6">
-                                <a href="https://mcb85.github.io/Crystal-Collector/" target="blank"> <img src="Crystal-Collector.JPG"
-                                        alt="Crystal Collector" class="img-thumbnail">
-                                </a>
-                                <div class="text-block">
-                                    <h4>Crystal Collector</h4>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <a href="https://mcb85.github.io/Trivia-Game/" target="blank"><img src="trivia.JPG"
+                                            alt="Trivia Game" class="img-thumbnail"></a>
+                                    <div class="text-block">
+                                        <h4>Trivia Game</h4>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
 
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <a href="https://mcb85.github.io/Trivia-Game/" target="blank"><img src="trivia.JPG"
-                                        alt="Trivia Game" class="img-thumbnail"></a>
-                                <div class="text-block">
-                                    <h4>Trivia Game</h4>
-                                </div>
-                            </div>
-
-                            <div class="col-sm-6">
-                                <a href="https://mcb85.github.io/GifTastic/" target="blank"><img src="gifTastic.JPG"
-                                        alt="Giftastic" class="img-thumbnail"></a>
-                                <div class="text-block text-white">
-                                    <h4 class="justify-content-center">Giftastic</h4>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <a href="https://mcb85.github.io/Train-Scheduler/" target="blank"><img
-                                        src="train-scheduler.JPG" alt="Train Scheduler" class="img-thumbnail"></a>
-                                <div class="text-block text-white">
-                                    <h4>Train Scheduler</h4>
+                                <div class="col-sm-6">
+                                    <a href="https://mcb85.github.io/GifTastic/" target="blank"><img src="gifTastic.JPG"
+                                            alt="Giftastic" class="img-thumbnail"></a>
+                                    <div class="text-block text-white">
+                                        <h4 class="justify-content-center">Giftastic</h4>
+                                    </div>
                                 </div>
                             </div>
 
-                            <div class="col-sm-6">
-                                <a href="https://fellsweb.github.io/Project_1/" target="blank"><img src="now.JPG"
-                                        alt="N.O.W." class="img-thumbnail"></a>
-                                <div class="text-block text-white">
-                                    <h4>N.O.W.</h4>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <a href="https://mcb85.github.io/Train-Scheduler/" target="blank"><img
+                                            src="train-scheduler.JPG" alt="Train Scheduler" class="img-thumbnail"></a>
+                                    <div class="text-block text-white">
+                                        <h4>Train Scheduler</h4>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
 
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <a href="https://github.com/mcb85/liri-node-app" target="blank"><img
-                                        src="initial-prompt.jpg" alt="liri" class="img-thumbnail"></a>
-                                <div class="text-block text-white">
-                                    <h4>Liri Node App</h4>
+                                <div class="col-sm-6">
+                                    <a href="https://fellsweb.github.io/Project_1/" target="blank"><img src="now.JPG"
+                                            alt="N.O.W." class="img-thumbnail"></a>
+                                    <div class="text-block text-white">
+                                        <h4>N.O.W.</h4>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-sm-6">
-                                <a href="https://github.com/mcb85/Bamazon" target="blank"><img
-                                        src="list-inventory.JPG" alt="bamazon" class="img-thumbnail"></a>
-                                <div class="text-block text-white">
-                                    <h4>Bamazon</h4>
+
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <a href="https://github.com/mcb85/liri-node-app" target="blank"><img
+                                            src="initial-prompt.jpg" alt="liri" class="img-thumbnail"></a>
+                                    <div class="text-block text-white">
+                                        <h4>Liri Node App</h4>
+                                    </div>
                                 </div>
+                                <div class="col-sm-6">
+                                    <a href="https://github.com/mcb85/Bamazon" target="blank"><img
+                                            src="list-inventory.JPG" alt="bamazon" class="img-thumbnail"></a>
+                                    <div class="text-block text-white">
+                                        <h4>Bamazon</h4>
+                                    </div>
+                                </div>
+
+
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <a href="https://secure-meadow-24027.herokuapp.com/" target="blank"><img
+                                                src="friend-finder.jpg" alt="friend-finder" class="img-thumbnail"></a>
+                                        <div class="text-block text-white">
+                                            <h4>Friend Finder</h4>
+                                        </div>
+                                    </div>
+                                  
+                                </div>
+
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </main>
 
 
@@ -174,16 +187,23 @@
                     </div>
                 </div>
 
-                <div class = "row">
+                <div class="row">
                     <div class="col-sm-6">
                         <a class="text-white" href="https://github.com/mcb85/liri-node-app"
                             target="blank">Liri-Node-App</a>
                     </div>
 
                     <div class="col-sm-6">
-                        <a class="text-white" href="https://github.com/mcb85/Bamazon"
-                            target="blank">Bamazon</a>
+                        <a class="text-white" href="https://github.com/mcb85/Bamazon" target="blank">Bamazon</a>
                     </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-6">
+                        <a class="text-white" href="https://github.com/mcb85/FriendFinder" target="blank">Friend
+                            Finder</a>
+                    </div>
+
                 </div>
 
 
@@ -194,9 +214,11 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 
 </body>
 
