add links to burger

--- a/portfolio.html
+++ b/portfolio.html
@@ -132,6 +132,14 @@
                                             <h4>Friend Finder</h4>
                                         </div>
                                     </div>
+
+                                    <div class="col-sm-6">
+                                        <a href="https://mysterious-brushlands-21717.herokuapp.com/" target="blank"><img
+                                                src="burger.jpg" alt="burger" class="img-thumbnail"></a>
+                                        <div class="text-block text-white">
+                                            <h4>Burger</h4>
+                                        </div>
+                                    </div>
                                   
                                 </div>
 
@@ -203,6 +211,11 @@
                         <a class="text-white" href="https://github.com/mcb85/FriendFinder" target="blank">Friend
                             Finder</a>
                     </div>
+
+                    <div class="col-sm-6">
+                        <a class="text-white" href="https://github.com/mcb85/burger" target="blank">Burger</a>
+                    </div>
+
 
                 </div>
 
