--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,18 @@
                                             <h4>Burger</h4>
                                         </div>
                                     </div>
-                                  
+
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <a href="https://fullspectrum1.herokuapp.com/" target="blank"><img
+                                                src="fullspectrum.jpg" alt="full-spectrum" class="img-thumbnail"></a>
+                                        <div class="text-block text-white">
+                                            <h4>Full Spectrum</h4>
+                                        </div>
+                                    </div>
+
                                 </div>
 
                             </div>
@@ -219,7 +230,12 @@
 
                 </div>
 
-
+                <div class="row">
+                    <div class="col-sm-6">
+                        <a class="text-white" href="https://github.com/mcb85/Project-2" target="blank">Full Spectrum
+                        </a>
+                    </div>
+                </div>
             </span>
         </div>
     </footer>
